--- a/unity.html
+++ b/unity.html
@@ -122,7 +122,7 @@
     </nav>
 
     <div class="content-container">
-        <h1 id="mainTitle">Welfare Dashboard</h1>
+        <h1 id="mainTitle">Unity For Humanity</h1>
 
         <div class="dashboard-grid">
             <div class="stat-card">
@@ -294,8 +294,8 @@
     <script>
         let currentLang = 'en';
         const translations = {
-            en: { title: "Welfare Dashboard", col: "Total Collected", spent: "Total Spent", rem: "Remaining Balance", families: "Families", help: "People We Helped" },
-            te: { title: "సంక్షేమ డాష్‌బోర్డ్", col: "మొత్తం వసూలు", spent: "మొత్తం ఖర్చు", rem: "మిగిలిన నగదు", families: "కుటుంబాలు", help: "మేము సహాయం చేసిన వ్యక్తులు" }
+            en: { title: "Unity For Humanity", col: "Total Collected", spent: "Total Spent", rem: "Remaining Balance", families: "Families", help: "People We Helped" },
+            te: { title: "మానవత్వం కోసం ఐక్యం", col: "మొత్తం వసూలు", spent: "మొత్తం ఖర్చు", rem: "మిగిలిన నగదు", families: "కుటుంబాలు", help: "మేము సహాయం చేసిన వ్యక్తులు" }
         };
 
         function toggleLanguage() {
@@ -314,4 +314,5 @@
         window.onclick = (e) => { if(e.target.className === 'modal') closeModal(); }
     </script>
 </body>
+
 </html>
